# StellarYield

./: .gitignore  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  README.md  VALIDATION_CHECKLIST.md  api-coverage-report.json  package-lock.json  package.json
contracts/: Cargo.toml  registryDiff.ts
contracts/__tests__/: registryDiff.test.ts
contracts/aa_factory/: Cargo.toml  README.md
contracts/aa_factory/src/: factory.rs  lib.rs  proxy_wallet.rs
contracts/aa_proxy/: Cargo.toml
contracts/aa_proxy/src/: lib.rs
contracts/aa_recovery/src/: lib.rs
contracts/clmm_core/: Cargo.toml
contracts/clmm_core/src/: lib.rs
contracts/interfaces/: artifact_manifest.rs  upgrade.rs
contracts/merkle_distributor/: Cargo.toml
contracts/merkle_distributor/src/: lib.rs
contracts/optimistic_governance/src/: lib.rs  storage.rs  test.rs  upgrade.rs
contracts/options/: Cargo.toml
contracts/options/src/: lib.rs  storage.rs  tests.rs
contracts/perpetuals/: Cargo.toml
contracts/rebalance_auction/: Cargo.toml
contracts/rebalance_auction/src/: lib.rs
contracts/scripts/: README.md  dry-run-migration.sh  register-migration.sh
contracts/settlement/: Cargo.toml
contracts/settlement/src/: lib.rs  upgrade.rs
contracts/settlement/test_snapshots/: fixture.json
contracts/stablecoin_manager/: Cargo.toml
contracts/stablecoin_manager/src/: lib.rs  storage.rs  test.rs
contracts/stableswap/: Cargo.toml
contracts/stableswap/src/: lib.rs
contracts/ve_tokenomics/src/: storage.rs  test.rs
contracts/verification/: Cargo.toml
contracts/verification/regression/: clmm_amount0_always_zero.json  clmm_sqrt_ratio_negative_tick_underflow.json  options_exp_wrong_signed.json  options_premium_exceeds_spot.json  stablecoin_cr_wraps_silently.json
contracts/verification/resource_snapshots/: stableswap_swap_balanced.json  stableswap_swap_under_imbalance.json
contracts/verification/src/: bigmath.rs  corpus.rs  lib.rs  resource.rs  tolerance.rs  vectors.rs
contracts/verification/tests/: diff_clmm.rs  diff_options.rs  diff_perpetuals.rs  diff_stablecoin.rs  diff_stableswap.rs  regression_replay.rs  resource_snapshots.rs  state_machine_stableswap.rs
(+267 files in other folders)
