[package]
name = "aa_proxy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "22.0.0"

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
p256 = { version = "0.13", default-features = false, features = ["ecdsa", "arithmetic"] }
