[package]
name = "verification"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["rlib"]
doctest = false

[dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
stableswap = { path = "../stableswap" }
clmm_core = { path = "../clmm_core" }
options = { path = "../options" }
perpetuals = { path = "../perpetuals" }
stablecoin_manager = { path = "../stablecoin_manager" }
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2"
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
proptest = "1.4.0"

[dev-dependencies]
